<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="map_location_adddress">地址:</string>
    <string name="map_location_name">名称:</string>
    <string name="map_location_phone">电话:</string>
    <string name="map_location_others">简介:</string>
    <string name="zhoubian_distance_tx_format">%1$s 米</string>
    <string name="zhoubian_category_all">全部分类</string>
    <string name="zhoubian_distance">周边距离</string>
    <string name="user_login_ing">正在登陆！</string>
    <string name="user_login_error_tip">用户名或密码错误！</string>
    <string name="user_register_error_tip">注册失败！</string>
    <string name="ptr_pull_to_refresh">下拉刷新</string>
    <string name="ptr_release_to_refresh">松开刷新</string>
    <string name="ptr_refreshing">正在刷新…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="baidu_map_key">C5aP2KR1pn2bXNt4fbdrFCzi</string>
    <string name="voice_key">54a9de39</string>
    <string name="service_action">com.yc.service.backgourond</string>
    <string name="app_name">e都</string>
    <string name="action_settings">Settings</string>
    <string name="user_login">未登陆</string>
    <string name="user_logined">已登陆</string>
    <string name="user_message">我的通知</string>
    <string name="user_info">个人信息</string>
    <string name="user_store">我的店铺</string>
    <string name="cell_broadcast">小区广播</string>
    <string name="user_open_shop">我要开店</string>
    <string name="user_order_sheet">购物订单</string>
    <string name="promote_advice">改进建议</string>
    <string name="contact_service">联系客服</string>
    <string name="property_management">物管</string>
    <string name="setting_menu">设置</string>
    <string name="cell_manage">物管</string>
    <string name="authorize_error">授权失败！</string>
    <string name="map_input_error">请输入正确的检索条件！</string>
    <string name="net_error">网络出错！</string>
    <string name="top_bar_default_locate">建大教授花园</string>
    <string name="progress_freshing">数据收集中...</string>
    <string name="login_lable_name">用户名：</string>
    <string name="login_input_hint">请输入用户名</string>
    <string name="login_lable_pwd">密码：</string>
    <string name="login_lable_sure_pwd">确认密码：</string>
    <string name="login_lable_true_name">真实姓名：</string>
    <string name="login_lable_phone_number">电话：</string>
    <string name="login_lable_email">邮箱：</string>
    <string name="login_lable_qq">QQ：</string>
    <string name="login_register">注 册</string>
    <string name="login_in">登 陆</string>
    <string name="login_rem_pwd">记住密码</string>
    <string name="login_auto">自动登陆</string>
    <string name="phone_dialog">拨打</string>
    <string name="phone_txt">服务电话</string>
    <string name="login_register_title">用户注册</string>
    <string name="login_in_title">用户登陆</string>
    <string name="login_lable_user_type">用户类型：</string>
    <string name="login_lable_building_name">楼名称：</string>
    <string name="login_lable_buliding_number">单元号：</string>
    <string name="login_lable_house_number">房号：</string>
    <string name="login_lable_user_description">信息描述（最多200字）</string>
    <string name="manager_broadcast_title">通 知</string>
    <string name="manager_listitem_addfix">物业保修</string>
    <string name="manager_listitem_cell_introduce">小区信息</string>
    <string name="manager_fix_title">维修标题：</string>
    <string name="manager_fix_content">维修内容</string>
    <string name="manager_fix_user_phone">本人电话：</string>
    <string name="btn_sure"> 确 定</string>
    <string name="btn_cancel">取 消</string>
    <string name="btn_submit">提 交</string>
    <string name="manager_cell_contact_phone">联系电话</string>
    <string name="manager_cell_description">小区描述：</string>
    <string name="top_bar_xmls">http://schemas.android.com/apk/res/com.edoucell.ych</string>
    <string name="manager_cell_company">物业公司：</string>
    <string name="manager_cell_company_contact_user">联系人：</string>

    <string-array name="zhoubian_category_array">
        <item>学校</item>
        <item>酒店</item>
        <item>宾馆</item>
        <item>饭店</item>
        <item>医院</item>
        <item>酒吧</item>
        <item>KTV</item>
        <item>公园</item>
    </string-array>
    <string-array name="zhoubian_distance_array">
        <item>100</item>
        <item>300</item>
        <item>500</item>
        <item>700</item>
        <item>1000</item>
        <item>1500</item>
        <item>3000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>
    <string-array name="tab_array">
        <item>主页</item>
        <item>圈圈</item>
        <item>周边</item>
        <item>剁手</item>
        <item>知生活</item>
    </string-array>
    <string-array name="user_type">
        <item>业主用户</item>
        <item>商家用户</item>
        <item>物业用户</item>
        <item>业主且商家用户</item>
    </string-array>

</resources>