<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/top_bar"
        android:padding="20dp" >

        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|right"
                    android:text="@string/login_lable_name"
                    android:textColor="@color/color_black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/login_name"
                    android:layout_width="170dp"
                    android:layout_height="fill_parent"
                    android:background="@null"
                    android:hint="@string/login_input_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#6f737a" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|right"
                    android:text="@string/login_lable_pwd"
                    android:textColor="@color/color_black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/login_pwd"
                    android:layout_width="170dp"
                    android:layout_height="fill_parent"
                    android:background="@null"
                    android:password="true" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin1"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/login_register"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:text="@string/login_register"
                android:textColor="@color/color_black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/login_in"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_bg"
                android:text="@string/login_in"
                android:textColor="@color/color_black"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel2"
            android:layout_marginTop="10dp" >

            <CheckBox
                android:id="@+id/login_rem_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_rem_pwd" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel3"
            android:layout_marginTop="10dp" >

            <CheckBox
                android:id="@+id/login_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_auto" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>