<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="-200dp"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/rel_login_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_bar"
            android:padding="20dp" >

            <LinearLayout
                android:id="@+id/lin1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical|right"
                        android:text="@string/login_lable_name"
                        android:textColor="@color/color_black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/register_name"
                        android:layout_width="170dp"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:hint="@string/login_input_hint" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical|right"
                        android:text="@string/login_lable_pwd"
                        android:textColor="@color/color_black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/register_pwd"
                        android:layout_width="170dp"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:password="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical|right"
                        android:text="@string/login_lable_sure_pwd"
                        android:textColor="@color/color_black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/register_sure_pwd"
                        android:layout_width="170dp"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:password="true" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_register_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_login_account"
            android:layout_marginTop="20dp" >
            <Button
                android:id="@+id/register_button"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/login_register"
                android:textColor="@color/color_black"
                android:textSize="20sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>