<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/leftmenu_bg" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp" >

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/menu_user_logo"
                    android:layout_width="@dimen/left_menu_icon_size"
                    android:layout_height="@dimen/left_menu_icon_size"
                    android:scaleType="fitXY"
                    android:src="@drawable/default_head"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/user_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/user_login"
                    android:textColor="#0468ff"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/menu_press_background"
                        android:clickable="true" >

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#c6c3c4" />
                    </LinearLayout>

                    <LinearLayout style="@style/menu_item_theme" 
                        android:id="@+id/menu_user_message"
                        >

                        <ImageView
                            android:layout_width="@dimen/left_menu_icon_size"
                            android:layout_height="@dimen/left_menu_icon_size"
                            android:src="@drawable/user_info" />

                        <TextView
                            style="@style/menu_item_textview"
                            android:text="@string/user_message" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#c6c3c4" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/menu_user_info"
                        style="@style/menu_item_theme" >

                        <ImageView
                            android:layout_width="@dimen/left_menu_icon_size"
                            android:layout_height="@dimen/left_menu_icon_size"
                            android:src="@drawable/user_info" />

                        <TextView
                            style="@style/menu_item_textview"
                            android:text="@string/user_info" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#c6c3c4" />
                    </LinearLayout>

                    <LinearLayout style="@style/menu_item_theme" >

                        <ImageView
                            android:layout_width="@dimen/left_menu_icon_size"
                            android:layout_height="@dimen/left_menu_icon_size"
                            android:src="@drawable/user_info" />

                        <TextView
                            style="@style/menu_item_textview"
                            android:text="@string/user_store" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#c6c3c4" />
                    </LinearLayout>

                    <LinearLayout style="@style/menu_item_theme" >

                        <ImageView
                            android:layout_width="@dimen/left_menu_icon_size"
                            android:layout_height="@dimen/left_menu_icon_size"
                            android:src="@drawable/user_info" />

                        <TextView
                            style="@style/menu_item_textview"
                            android:text="@string/user_open_shop" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#c6c3c4" />
                    </LinearLayout>

                    <LinearLayout style="@style/menu_item_theme" >

                        <ImageView
                            android:layout_width="@dimen/left_menu_icon_size"
                            android:layout_height="@dimen/left_menu_icon_size"
                            android:src="@drawable/user_info" />

                        <TextView
                            style="@style/menu_item_textview"
                            android:text="@string/user_order_sheet" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#c6c3c4" />
                    </LinearLayout>

                    <LinearLayout style="@style/menu_item_theme" >

                        <ImageView
                            android:layout_width="@dimen/left_menu_icon_size"
                            android:layout_height="@dimen/left_menu_icon_size"
                            android:src="@drawable/user_info" />

                        <TextView
                            style="@style/menu_item_textview"
                            android:text="@string/promote_advice" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#c6c3c4" />
                    </LinearLayout>

                    <LinearLayout style="@style/menu_item_theme" >

                        <ImageView
                            android:layout_width="@dimen/left_menu_icon_size"
                            android:layout_height="@dimen/left_menu_icon_size"
                            android:src="@drawable/user_info" />

                        <TextView
                            style="@style/menu_item_textview"
                            android:text="@string/contact_service" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#c6c3c4" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <com.yc.view.tools.TouchFramLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/menu_user_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/menu_press_background"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="3dp" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/setting_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/setting_menu"
                    android:textColor="@color/color_white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_user_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@drawable/menu_press_background"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="3dp" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/setting_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/cell_manage"
                    android:textColor="@color/color_white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </com.yc.view.tools.TouchFramLayout>

</RelativeLayout>